--- a/client/src/widgets/06/style.scss
+++ b/client/src/widgets/06/style.scss
@@ -426,13 +426,31 @@
         }
 
         .lottery-results-content {
-          margin: 2px 4px;
           display: flex;
           flex-direction: column;
           gap: 4px;
           min-height: 90px;
           max-height: 170px;
+          width: calc(100% + 10px);
+          padding-right: 10px;
           overflow: auto;
+          scrollbar-gutter: stable;
+          scrollbar-width: thin;
+          scrollbar-color: rgba(0, 0, 0, 0.25) transparent;
+
+          // Scrollbar Styles
+          &::-webkit-scrollbar {
+            width: 2px;
+          }
+
+          &::-webkit-scrollbar-track {
+            background: transparent;
+          }
+
+          &::-webkit-scrollbar-thumb {
+            background: rgba(0, 0, 0, 0.25);
+            border-radius: 4px;
+          }
 
           .lottery-locked-message {
             border-radius: 4px;
